Fix !ENABLE(CSS_COMPOSITING) build after 265587@main https://bugs.webkit.org/show_bug.cgi?id=258645

Reviewed by Don Olmstead and Simon Fraser.

265587@main removed #if ENABLE(CSS_COMPOSITING) checks around calls
to shouldPaintUsingCompositeCopy(). Move shouldPaintUsingCompositeCopy()
definition out of #if ENABLE(CSS_COMPOSITING) check.

Canonical link: https://commits.webkit.org/265605@main